[package]
name = "context-size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_parser = "0.1.4"
deepsize = "0.2.0"
itertools = "0.10.5"
once_cell = "1.17.1"
parse-display-derive = "0.8.0"
rclite = "0.2.1"
serde = { version ="1.0.152", features = ["derive"] }
serde-jsonlines = "0.4.0"
serde_json = "1.0.93"
stats_alloc = "0.1.10"
